fix: better bundling

--- a/packages/composer/package.json
+++ b/packages/composer/package.json
@@ -103,6 +103,13 @@
   "dependencies": {
     "@sanity/icons": "^2.6.0",
     "@sanity/ui": "^1.8.3",
+    "@types/lodash.get": "^4.4.8",
+    "@types/lodash.isequal": "^4.5.7",
+    "@vercel/stega": "0.1.0",
+    "lodash.get": "^4.4.2",
+    "lodash.isequal": "^4.5.0",
+    "lru-cache": "10.0.1",
+    "mendoza": "3.0.3",
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
@@ -112,8 +119,8 @@
     "channels": "workspace:*",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "styled-components": "^6.1.0",
     "sanity": "^3.18.1",
+    "styled-components": "^6.1.0",
     "typescript": "^5.2.2",
     "visual-editing-helpers": "workspace:*"
   },
