feat: enable warp speed editing

--- a/apps/next/tsconfig.json
+++ b/apps/next/tsconfig.json
@@ -21,11 +21,13 @@
     "rootDir": "../..",
     "paths": {
       "@/*": ["./src/*"],
-      "@sanity/overlays": ["../../packages/overlays/src"]
+      "@sanity/overlays": ["../../packages/overlays/src"],
+      "@sanity/react-loader": ["../../packages/react-loader/src"]
     }
   },
   "include": [
     "../../packages/overlays/src",
+    "../../packages/react-loader/src",
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
