fix(deps): upgrade `@sanity/pkg-utils`

--- a/packages/nuxt-loader/package.json
+++ b/packages/nuxt-loader/package.json
@@ -49,7 +49,7 @@
     "prebuild": "rimraf dist artifact",
     "build": "pkg build --strict && pkg --strict",
     "lint": "eslint .",
-    "prepack": "npm run build",
+    "prepack": "pnpm build",
     "artifact": "pnpm pack --pack-destination artifact",
     "test": "tsc --noEmit",
     "watch": "pkg watch --strict"
@@ -116,7 +116,7 @@
     "@nanostores/vue": "0.10.0",
     "@sanity/client": "^6.7.0",
     "@sanity/overlays": "workspace:*",
-    "@sanity/pkg-utils": "^3.2.0",
+    "@sanity/pkg-utils": "^3.2.1",
     "channels": "workspace:*",
     "typescript": "^5.2.2",
     "@typescript-eslint/eslint-plugin": "^6.9.0",
