--- a/packages/composer/package.json
+++ b/packages/composer/package.json
@@ -24,14 +24,15 @@
   "source": "./src/index.ts",
   "types": "./dist/index.d.ts",
   "files": [
+    "CHANGELOG.md",
     "dist",
-    "CHANGELOG.md"
+    "src"
   ],
   "scripts": {
     "prebuild": "rimraf dist artifact",
     "build": "pkg build --strict && pkg --strict",
     "lint": "eslint .",
-    "prepack": "npm run build",
+    "prepack": "pnpm build",
     "artifact": "pnpm pack --pack-destination artifact",
     "test": "tsc --noEmit",
     "watch": "pkg watch --strict"
@@ -115,7 +116,7 @@
   "devDependencies": {
     "@sanity/client": "^6.7.0",
     "@sanity/csm": "workspace:*",
-    "@sanity/pkg-utils": "^3.2.0",
+    "@sanity/pkg-utils": "^3.2.1",
     "channels": "workspace:*",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
