--- a/packages/core-loader/package.json
+++ b/packages/core-loader/package.json
@@ -31,7 +31,7 @@
     "prebuild": "rimraf dist artifact",
     "build": "pkg build --strict && pkg --strict",
     "lint": "eslint .",
-    "prepack": "npm run build",
+    "prepack": "pnpm build",
     "artifact": "pnpm pack --pack-destination artifact",
     "test": "tsc --noEmit",
     "watch": "pkg watch --strict"
@@ -95,7 +95,7 @@
   "devDependencies": {
     "@sanity/client": "^6.7.0",
     "@sanity/groq-store": "workspace:*",
-    "@sanity/pkg-utils": "^3.2.0",
+    "@sanity/pkg-utils": "^3.2.1",
     "@typescript-eslint/eslint-plugin": "^6.9.0",
     "@typescript-eslint/parser": "^6.9.0",
     "channels": "workspace:*",
