--- a/packages/csm/package.json
+++ b/packages/csm/package.json
@@ -40,7 +40,7 @@
     "prebuild": "rimraf dist artifact",
     "build": "pkg build --strict && pkg --strict",
     "lint": "eslint .",
-    "prepack": "npm run build",
+    "prepack": "pnpm build",
     "artifact": "pnpm pack --pack-destination artifact",
     "test": "vitest",
     "watch": "pkg watch --strict"
@@ -100,7 +100,7 @@
   },
   "devDependencies": {
     "@sanity/client": "^6.7.0",
-    "@sanity/pkg-utils": "^3.2.0",
+    "@sanity/pkg-utils": "^3.2.1",
     "@typescript-eslint/eslint-plugin": "^6.9.0",
     "@typescript-eslint/parser": "^6.9.0",
     "eslint": "^8.52.0",
