--- a/packages/groq-store/package.json
+++ b/packages/groq-store/package.json
@@ -30,7 +30,7 @@
     "prebuild": "rimraf dist artifact",
     "build": "pkg build --strict && pkg --strict",
     "lint": "eslint .",
-    "prepack": "npm run build",
+    "prepack": "pnpm build",
     "artifact": "pnpm pack --pack-destination artifact && cp CHANGELOG.md artifact/CHANGELOG.md && cp RESTRICTED-README.md artifact/README.md",
     "test": "tsc --noEmit",
     "watch": "pkg watch --strict"
@@ -94,7 +94,7 @@
   "dependencies": {},
   "devDependencies": {
     "@sanity/client": "^6.7.0",
-    "@sanity/pkg-utils": "^3.2.0",
+    "@sanity/pkg-utils": "^3.2.1",
     "channels": "workspace:*",
     "typescript": "^5.2.2",
     "@typescript-eslint/eslint-plugin": "^6.9.0",
