--- a/packages/svelte-loader/package.json
+++ b/packages/svelte-loader/package.json
@@ -31,7 +31,7 @@
     "prebuild": "rimraf dist artifact",
     "build": "pkg build --strict && pkg --strict",
     "lint": "eslint .",
-    "prepack": "npm run build",
+    "prepack": "pnpm build",
     "artifact": "pnpm pack --pack-destination artifact",
     "test": "tsc --noEmit",
     "watch": "pkg watch --strict"
@@ -96,7 +96,7 @@
     "@sanity/groq-store": "workspace:*",
     "@sanity/core-loader": "workspace:*",
     "@sanity/client": "^6.7.0",
-    "@sanity/pkg-utils": "^3.2.0",
+    "@sanity/pkg-utils": "^3.2.1",
     "channels": "workspace:*",
     "typescript": "^5.2.2",
     "@typescript-eslint/eslint-plugin": "^6.9.0",
