build(apps): link `@sanity/csm`

--- a/apps/page-builder-demo/tsconfig.json
+++ b/apps/page-builder-demo/tsconfig.json
@@ -21,11 +21,13 @@
     "rootDir": "../..",
     "paths": {
       "@/*": ["./src/*"],
+      "@sanity/csm": ["../../packages/csm/src"],
       "@sanity/overlays": ["../../packages/overlays/src"],
       "@sanity/react-loader": ["../../packages/react-loader/src"]
     }
   },
   "include": [
+    "../../packages/csm/src",
     "../../packages/overlays/src",
     "../../packages/react-loader/src",
     "next-env.d.ts",
