refactor(apps): use `@sanity/csm`

--- a/apps/common/package.json
+++ b/apps/common/package.json
@@ -80,9 +80,9 @@
     "root": true
   },
   "dependencies": {
+    "@sanity/csm": "workspace:*",
     "@sanity/icons": "^2.6.0",
     "@sanity/overlays": "workspace:*",
-    "@sanity/preview-kit": "3.2.6",
     "@sanity/ui": "^1.8.3"
   },
   "devDependencies": {
