--- a/apps/common/tsconfig.json
+++ b/apps/common/tsconfig.json
@@ -24,7 +24,11 @@
     "noUnusedLocals": false,
     "noUnusedParameters": false,
     "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "paths": {
+      "@sanity/csm": ["../../packages/csm/src"],
+      "@sanity/overlays": ["../../packages/overlays/src"]
+    }
   },
   "include": ["**/*.ts", "**/*.tsx"],
   "exclude": ["dist", "node_modules"]
