refactor: composer to pages

--- a/apps/nuxt/package.json
+++ b/apps/nuxt/package.json
@@ -10,10 +10,10 @@
   },
   "dependencies": {
     "@nuxtjs/tailwindcss": "^6.8.1",
-    "@sanity/composer": "workspace:*",
     "@sanity/csm": "workspace:*",
     "@sanity/nuxt-loader": "workspace:*",
     "@sanity/overlays": "workspace:*",
+    "@sanity/pages": "workspace:*",
     "apps-common": "workspace:*",
     "channels": "workspace:*",
     "rxjs": "^7.8.1",
