--- a/apps/studio/tsconfig.json
+++ b/apps/studio/tsconfig.json
@@ -16,7 +16,7 @@
     "jsx": "preserve",
     "incremental": true,
     "paths": {
-      "@sanity/composer": ["../../packages/composer/src"]
+      "@sanity/pages": ["../../packages/pages/src"]
     }
   },
   "include": ["**/*.ts", "**/*.tsx"],
