--- a/apps/svelte/package.json
+++ b/apps/svelte/package.json
@@ -15,8 +15,8 @@
     "@fontsource/fira-mono": "^5.0.8",
     "@neoconfetti/svelte": "^1.0.0",
     "@sanity/client": "^6.7.0",
-    "@sanity/composer": "workspace:*",
     "@sanity/overlays": "workspace:*",
+    "@sanity/pages": "workspace:*",
     "@sanity/svelte-loader": "workspace:*",
     "@sveltejs/adapter-auto": "^2.1.0",
     "@sveltejs/kit": "^1.27.1",
