fix(refactor): composer to pages (#202)
Co-authored-by: Cody Olsen <81981+stipsan@users.noreply.github.com>

--- a/apps/studio/package.json
+++ b/apps/studio/package.json
@@ -7,7 +7,7 @@
   },
   "dependencies": {
     "@sanity/assist": "^1.2.11",
-    "@sanity/composer": "workspace:*",
+    "@sanity/pages": "workspace:*",
     "@sanity/ui": "^1.8.3",
     "@sanity/vision": "^3.18.1",
     "@types/react": "^18.2.33",
