chore: prepare release

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -19,7 +19,7 @@
     },
     "packages/pages": {
       "prerelease": true,
-      "release-as": "0.4.4"
+      "release-as": "0.4.5-pink-lizard"
     },
     "packages/react-loader": {
       "prerelease": true
