chore: remove override

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -18,8 +18,7 @@
       "prerelease": true
     },
     "packages/pages": {
-      "prerelease": true,
-      "release-as": "0.4.5-pink-lizard"
+      "prerelease": true
     },
     "packages/react-loader": {
       "prerelease": true
