fix: use canary version of `@sanity/client`

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "@sanity/block-tools": "3.18.2-pink-lizard.162",
     "@sanity/cli": "3.18.2-pink-lizard.162",
+    "@sanity/client": "6.7.1-canary.1",
     "@sanity/diff": "3.18.2-pink-lizard.162",
     "@sanity/export": "3.18.2-pink-lizard.162",
     "@sanity/import": "3.18.2-pink-lizard.162",
@@ -52,6 +53,7 @@
     "overrides": {
       "@sanity/block-tools": "$@sanity/block-tools",
       "@sanity/cli": "$@sanity/cli",
+      "@sanity/client": "$@sanity/client",
       "@sanity/diff": "$@sanity/diff",
       "@sanity/export": "$@sanity/export",
       "@sanity/import": "$@sanity/import",
