chore: fix release config

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -18,7 +18,8 @@
       "prerelease": true
     },
     "packages/presentation": {
-      "prerelease": true
+      "prerelease": true,
+      "release-as": "0.5.0"
     },
     "packages/react-loader": {
       "prerelease": true
