chore: fix release

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -19,7 +19,7 @@
     },
     "packages/presentation": {
       "prerelease": true,
-      "release-as": "0.5.0"
+      "release-as": "0.5.0-pink-lizard"
     },
     "packages/react-loader": {
       "prerelease": true
