--- a/packages/presentation/package.json
+++ b/packages/presentation/package.json
@@ -102,12 +102,11 @@
     "root": true
   },
   "dependencies": {
+    "@sanity/groq-store": "workspace:*",
     "@sanity/icons": "^2.6.0",
     "@sanity/ui": "^1.8.3",
     "@types/lodash.isequal": "^4.5.7",
-    "@vercel/stega": "0.1.0",
     "lodash.isequal": "^4.5.0",
-    "lru-cache": "10.0.1",
     "mendoza": "3.0.3",
     "rxjs": "^7.8.1"
   },
