fix: prepare release

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -54,3 +54,5 @@ jobs:
       # need to publish all unpublished versions to NPM here
       - run: pnpm -r publish
         if: ${{ steps.release.outputs.releases_created }}
+        env:
+          NPM_CONFIG_PROVENANCE: true
