--- a/packages/nuxt-loader/package.json
+++ b/packages/nuxt-loader/package.json
@@ -46,11 +46,10 @@
     "CHANGELOG.md"
   ],
   "scripts": {
-    "prebuild": "rimraf dist artifact",
+    "prebuild": "rimraf dist",
     "build": "pkg build --strict && pkg --strict",
     "lint": "eslint .",
-    "prepack": "pnpm build",
-    "artifact": "pnpm pack --pack-destination artifact",
+    "prepublishOnly": "pnpm build",
     "test": "tsc --noEmit",
     "watch": "pkg watch --strict"
   },
