--- a/packages/groq-store/package.json
+++ b/packages/groq-store/package.json
@@ -24,14 +24,14 @@
   "source": "./src/index.ts",
   "types": "./dist/index.d.ts",
   "files": [
-    "dist"
+    "dist",
+    "CHANGELOG.md"
   ],
   "scripts": {
-    "prebuild": "rimraf dist artifact",
+    "prebuild": "rimraf dist",
     "build": "pkg build --strict && pkg --strict",
     "lint": "eslint .",
-    "prepack": "pnpm build",
-    "artifact": "pnpm pack --pack-destination artifact && cp CHANGELOG.md artifact/CHANGELOG.md && cp RESTRICTED-README.md artifact/README.md",
+    "prepublishOnly": "pnpm build",
     "test": "tsc --noEmit",
     "watch": "pkg watch --strict"
   },
