--- a/packages/presentation/package.json
+++ b/packages/presentation/package.json
@@ -24,16 +24,15 @@
   "source": "./src/index.ts",
   "types": "./dist/index.d.ts",
   "files": [
-    "CHANGELOG.md",
     "dist",
-    "src"
+    "src",
+    "CHANGELOG.md"
   ],
   "scripts": {
-    "prebuild": "rimraf dist artifact",
+    "prebuild": "rimraf dist",
     "build": "pkg build --strict && pkg --strict",
     "lint": "eslint .",
-    "prepack": "pnpm build",
-    "artifact": "pnpm pack --pack-destination artifact",
+    "prepublishOnly": "pnpm build",
     "test": "vitest --pass-with-no-tests",
     "watch": "pkg watch --strict"
   },
