chore: prepare making `@sanity/csm` private

--- a/packages/overlays/package.json
+++ b/packages/overlays/package.json
@@ -153,7 +153,7 @@
     "node": ">=16.14"
   },
   "publishConfig": {
-    "access": "public",
+    "access": "restricted",
     "tag": "pink-lizard"
   }
 }
