fix: use the `resolveMapping` from `@sanity/client`

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -29,6 +29,7 @@
       "matchDepNames": [
         "@sanity/block-tools",
         "@sanity/cli",
+        "@sanity/client",
         "@sanity/diff",
         "@sanity/export",
         "@sanity/import",
