--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "dependencies": {
     "@sanity/block-tools": "3.18.2-pink-lizard.162",
     "@sanity/cli": "3.18.2-pink-lizard.162",
-    "@sanity/client": "6.7.1-canary.6",
+    "@sanity/client": "6.7.1-pink-lizard.0",
     "@sanity/diff": "3.18.2-pink-lizard.162",
     "@sanity/export": "3.18.2-pink-lizard.162",
     "@sanity/import": "3.18.2-pink-lizard.162",
