--- a/packages/presentation/tsconfig.json
+++ b/packages/presentation/tsconfig.json
@@ -6,15 +6,19 @@
     "strictNullChecks": true,
     "paths": {
       "@sanity/groq-store": ["../groq-store/src"],
-      "@sanity/preview-url-secret": ["../preview-url-secret/src"]
+      "@sanity/preview-url-secret": ["../preview-url-secret/src"],
+      "channels": ["../channels/src"],
+      "visual-editing-helpers": ["../visual-editing-helpers/src"]
     }
   },
   "include": [
     "**/*.ts",
     "**/*.tsx",
+    "../channels/src",
     "../groq-store/src",
     "../preview-url-secret/src",
-    "../preview-url-secret/legacy"
+    "../preview-url-secret/legacy",
+    "../visual-editing-helpers/src"
   ],
   "exclude": ["dist", "node_modules"]
 }
