fix: move `@sanity/csm` into `visual-editing-helpers`

--- a/apps/common/tsconfig.json
+++ b/apps/common/tsconfig.json
@@ -26,8 +26,7 @@
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "paths": {
-      "@sanity/csm": ["../../packages/csm/src"],
-      "@sanity/overlays": ["../../packages/overlays/src"]
+      "@sanity/overlays": ["../../packages/overlays/src"],
     }
   },
   "include": ["**/*.ts", "**/*.tsx"],
