--- a/package.json
+++ b/package.json
@@ -41,11 +41,13 @@
     "styled-components": "6.1.0"
   },
   "devDependencies": {
+    "@sanity/pkg-utils": "^3.2.2",
     "prettier": "3.0.3",
     "prettier-plugin-packagejson": "2.4.6",
     "prettier-plugin-svelte": "3.0.3",
     "prettier-plugin-tailwindcss": "0.5.6",
-    "turbo": "1.10.16"
+    "turbo": "1.10.16",
+    "typescript": "^5.2.2"
   },
   "packageManager": "pnpm@8.10.2",
   "pnpm": {
