--- a/apps/common/package.json
+++ b/apps/common/package.json
@@ -82,6 +82,7 @@
   "dependencies": {
     "@sanity/icons": "^2.6.0",
     "@sanity/overlays": "workspace:*",
+    "visual-editing-helpers": "workspace:*",
     "@sanity/ui": "^1.8.3"
   },
   "devDependencies": {
