--- a/apps/nuxt/package.json
+++ b/apps/nuxt/package.json
@@ -16,7 +16,8 @@
     "apps-common": "workspace:*",
     "channels": "workspace:*",
     "rxjs": "^7.8.1",
-    "sanity": "^3.19.0"
+    "sanity": "^3.19.0",
+    "visual-editing-helpers": "workspace:*"
   },
   "devDependencies": {
     "@nuxt/devtools": "^1.0.0",
