--- a/apps/page-builder-demo/package.json
+++ b/apps/page-builder-demo/package.json
@@ -32,6 +32,7 @@
     "styled-components": "^6.1.0",
     "suspend-react": "0.1.3",
     "tailwindcss": "^3.3.5",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "visual-editing-helpers": "workspace:*"
   }
 }
