fix: handle bundler issue with importing from `sanity`

--- a/packages/visual-editing-helpers/package.json
+++ b/packages/visual-editing-helpers/package.json
@@ -115,6 +115,7 @@
     "typescript": "^5.2.2",
     "valibot": "^0.20.0",
     "sanity": "3.18.2-pink-lizard.170",
+    "@sanity/util": "3.18.2-pink-lizard.172",
     "vitest": "^0.34.6"
   },
   "peerDependencies": {
