chore: run publish

--- a/packages/core-loader/package.json
+++ b/packages/core-loader/package.json
@@ -113,7 +113,7 @@
     "node": ">=18"
   },
   "publishConfig": {
-    "access": "restricted",
+    "access": "public",
     "tag": "pink-lizard"
   },
   "dependencies": {
