--- a/packages/nuxt-loader/package.json
+++ b/packages/nuxt-loader/package.json
@@ -141,7 +141,7 @@
     "node": ">=18"
   },
   "publishConfig": {
-    "access": "restricted",
+    "access": "public",
     "tag": "pink-lizard"
   }
 }
