--- a/packages/presentation/package.json
+++ b/packages/presentation/package.json
@@ -132,7 +132,7 @@
     "node": ">=16.14"
   },
   "publishConfig": {
-    "access": "restricted",
+    "access": "public",
     "tag": "pink-lizard"
   }
 }
