--- a/packages/groq-store/package.json
+++ b/packages/groq-store/package.json
@@ -114,7 +114,7 @@
     "node": ">=18"
   },
   "publishConfig": {
-    "access": "restricted",
+    "access": "public",
     "tag": "pink-lizard"
   }
 }
