--- a/packages/presentation/package.json
+++ b/packages/presentation/package.json
@@ -42,7 +42,8 @@
   ],
   "prettier": {
     "semi": false,
-    "singleQuote": true
+    "singleQuote": true,
+    "plugins": ["prettier-plugin-packagejson"]
   },
   "eslintConfig": {
     "parser": "@typescript-eslint/parser",
