--- a/packages/channels/package.json
+++ b/packages/channels/package.json
@@ -19,7 +19,8 @@
   },
   "prettier": {
     "semi": false,
-    "singleQuote": true
+    "singleQuote": true,
+    "plugins": ["prettier-plugin-packagejson"]
   },
   "eslintConfig": {
     "parser": "@typescript-eslint/parser",
