--- a/packages/visual-editing-helpers/package.json
+++ b/packages/visual-editing-helpers/package.json
@@ -53,7 +53,8 @@
   ],
   "prettier": {
     "semi": false,
-    "singleQuote": true
+    "singleQuote": true,
+    "plugins": ["prettier-plugin-packagejson"]
   },
   "eslintConfig": {
     "parser": "@typescript-eslint/parser",
