--- a/packages/svelte-loader/package.json
+++ b/packages/svelte-loader/package.json
@@ -92,6 +92,9 @@
     },
     "root": true
   },
+  "dependencies": {
+    "@sanity/core-loader": "workspace:*"
+  },
   "devDependencies": {
     "@sanity/groq-store": "workspace:*",
     "@sanity/core-loader": "workspace:*",
