--- a/packages/react-loader/package.json
+++ b/packages/react-loader/package.json
@@ -116,6 +116,9 @@
     },
     "root": true
   },
+  "dependencies": {
+    "@sanity/core-loader": "workspace:*"
+  },
   "devDependencies": {
     "@sanity/core-loader": "workspace:*",
     "@sanity/groq-store": "workspace:*",
