--- a/packages/react-loader/package.json
+++ b/packages/react-loader/package.json
@@ -120,10 +120,7 @@
     "@sanity/core-loader": "workspace:*"
   },
   "devDependencies": {
-    "@sanity/core-loader": "workspace:*",
-    "@sanity/groq-store": "workspace:*",
     "@sanity/client": "^6.7.0",
-    "@sanity/overlays": "workspace:*",
     "@sanity/pkg-utils": "^3.2.2",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
     "@typescript-eslint/parser": "^6.9.1",
@@ -138,9 +135,8 @@
     "visual-editing-helpers": "workspace:*"
   },
   "peerDependencies": {
-    "react": "^18.2.0",
     "@sanity/client": "6.7.1-pink-lizard.0",
-    "@sanity/overlays": "workspace:*"
+    "react": "^18.2.0"
   },
   "engines": {
     "node": ">=18"
