--- a/packages/channels/package.json
+++ b/packages/channels/package.json
@@ -18,9 +18,11 @@
     "test": "vitest --pass-with-no-tests"
   },
   "prettier": {
+    "plugins": [
+      "prettier-plugin-packagejson"
+    ],
     "semi": false,
-    "singleQuote": true,
-    "plugins": ["prettier-plugin-packagejson"]
+    "singleQuote": true
   },
   "eslintConfig": {
     "parser": "@typescript-eslint/parser",
