--- a/packages/groq-store/package.json
+++ b/packages/groq-store/package.json
@@ -40,9 +40,11 @@
     "maintained node versions"
   ],
   "prettier": {
+    "plugins": [
+      "prettier-plugin-packagejson"
+    ],
     "semi": false,
-    "singleQuote": true,
-    "plugins": ["prettier-plugin-packagejson"]
+    "singleQuote": true
   },
   "eslintConfig": {
     "parser": "@typescript-eslint/parser",
