--- a/packages/nuxt-loader/package.json
+++ b/packages/nuxt-loader/package.json
@@ -58,9 +58,11 @@
     "maintained node versions"
   ],
   "prettier": {
+    "plugins": [
+      "prettier-plugin-packagejson"
+    ],
     "semi": false,
-    "singleQuote": true,
-    "plugins": ["prettier-plugin-packagejson"]
+    "singleQuote": true
   },
   "eslintConfig": {
     "parser": "@typescript-eslint/parser",
@@ -117,14 +119,14 @@
     "@nanostores/vue": "0.10.0",
     "@sanity/client": "^6.7.0",
     "@sanity/pkg-utils": "^3.2.2",
-    "channels": "workspace:*",
-    "typescript": "^5.2.2",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
     "@typescript-eslint/parser": "^6.9.1",
+    "channels": "workspace:*",
     "eslint": "^8.52.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-simple-import-sort": "^10.0.0",
+    "typescript": "^5.2.2",
     "visual-editing-helpers": "workspace:*",
     "vue": "^3.3.7"
   },
