--- a/packages/react-loader/package.json
+++ b/packages/react-loader/package.json
@@ -48,19 +48,21 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "pkg build --strict && pkg --strict",
+    "dev": "pkg watch --strict",
     "lint": "eslint .",
     "prepublishOnly": "pnpm build",
-    "test": "tsc --noEmit",
-    "dev": "pkg watch --strict"
+    "test": "tsc --noEmit"
   },
   "browserslist": [
     "> 0.2% and last 2 versions and supports es6-module and supports es6-module-dynamic-import and not dead and not IE 11",
     "maintained node versions"
   ],
   "prettier": {
+    "plugins": [
+      "prettier-plugin-packagejson"
+    ],
     "semi": false,
-    "singleQuote": true,
-    "plugins": ["prettier-plugin-packagejson"]
+    "singleQuote": true
   },
   "eslintConfig": {
     "parser": "@typescript-eslint/parser",
@@ -122,9 +124,9 @@
   "devDependencies": {
     "@sanity/client": "^6.7.0",
     "@sanity/pkg-utils": "^3.2.2",
+    "@types/react": "^18.2.34",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
     "@typescript-eslint/parser": "^6.9.1",
-    "@types/react": "^18.2.34",
     "channels": "workspace:*",
     "eslint": "^8.52.0",
     "eslint-config-prettier": "^9.0.0",
