--- a/packages/visual-editing-helpers/package.json
+++ b/packages/visual-editing-helpers/package.json
@@ -43,8 +43,8 @@
     "build": "pkg build --strict && pkg --strict",
     "lint": "eslint .",
     "prepublishOnly": "pnpm build",
-    "typecheck": "tsc --noEmit",
     "test": "vitest",
+    "typecheck": "tsc --noEmit",
     "watch": "pkg watch --strict"
   },
   "browserslist": [
@@ -52,9 +52,11 @@
     "maintained node versions"
   ],
   "prettier": {
+    "plugins": [
+      "prettier-plugin-packagejson"
+    ],
     "semi": false,
-    "singleQuote": true,
-    "plugins": ["prettier-plugin-packagejson"]
+    "singleQuote": true
   },
   "eslintConfig": {
     "parser": "@typescript-eslint/parser",
@@ -106,17 +108,17 @@
     "root": true
   },
   "devDependencies": {
+    "@sanity/client": "^6.7.0",
+    "@sanity/util": "3.18.2-pink-lizard.172",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
     "@typescript-eslint/parser": "^6.9.1",
-    "@sanity/client": "^6.7.0",
     "eslint": "^8.52.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-simple-import-sort": "^10.0.0",
+    "sanity": "3.18.2-pink-lizard.170",
     "typescript": "^5.2.2",
     "valibot": "^0.20.0",
-    "sanity": "3.18.2-pink-lizard.170",
-    "@sanity/util": "3.18.2-pink-lizard.172",
     "vitest": "^0.34.6"
   },
   "peerDependencies": {
