--- a/packages/overlays/package.json
+++ b/packages/overlays/package.json
@@ -113,8 +113,7 @@
   "dependencies": {
     "@sanity/icons": "^2.6.0",
     "@sanity/ui": "^1.8.3",
-    "@vercel/stega": "0.1.0",
-    "history": "^5.3.0"
+    "@vercel/stega": "0.1.0"
   },
   "devDependencies": {
     "@sanity/pkg-utils": "^3.2.2",
