fix(README): add badges and links

--- a/packages/core-loader/package.json
+++ b/packages/core-loader/package.json
@@ -1,6 +1,15 @@
 {
   "name": "@sanity/core-loader",
   "version": "0.3.4-pink-lizard",
+  "homepage": "https://github.com/sanity-io/visual-editing/tree/main/packages/core-loader#readme",
+  "bugs": {
+    "url": "https://github.com/sanity-io/visual-editing/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@github.com/sanity-io/visual-editing.git",
+    "directory": "packages/core-loader"
+  },
   "license": "MIT",
   "author": "Sanity.io <hello@sanity.io>",
   "sideEffects": false,
