--- a/packages/overlays/package.json
+++ b/packages/overlays/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@sanity/overlays",
   "version": "0.1.16-pink-lizard",
-  "homepage": "https://github.com/sanity-io/overlays#readme",
+  "homepage": "https://github.com/sanity-io/visual-editing/tree/main/packages/overlays#readme",
   "bugs": {
-    "url": "https://github.com/sanity-io/overlays/issues"
+    "url": "https://github.com/sanity-io/visual-editing/issues"
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/sanity-io/overlays.git",
+    "url": "git+ssh://git@github.com/sanity-io/visual-editing.git",
     "directory": "packages/overlays"
   },
   "license": "MIT",
