--- a/packages/svelte-loader/package.json
+++ b/packages/svelte-loader/package.json
@@ -1,6 +1,15 @@
 {
   "name": "@sanity/svelte-loader",
   "version": "0.1.4-pink-lizard",
+  "homepage": "https://github.com/sanity-io/visual-editing/tree/main/packages/svelte-loader#readme",
+  "bugs": {
+    "url": "https://github.com/sanity-io/visual-editing/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@github.com/sanity-io/visual-editing.git",
+    "directory": "packages/svelte-loader"
+  },
   "license": "MIT",
   "author": "Sanity.io <hello@sanity.io>",
   "sideEffects": false,
