--- a/packages/groq-store/package.json
+++ b/packages/groq-store/package.json
@@ -1,6 +1,15 @@
 {
   "name": "@sanity/groq-store",
   "version": "0.0.11-pink-lizard",
+  "homepage": "https://github.com/sanity-io/visual-editing/tree/main/packages/groq-store#readme",
+  "bugs": {
+    "url": "https://github.com/sanity-io/visual-editing/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@github.com/sanity-io/visual-editing.git",
+    "directory": "packages/groq-store"
+  },
   "license": "MIT",
   "author": "Sanity.io <hello@sanity.io>",
   "sideEffects": false,
