--- a/release-please-config.json
+++ b/release-please-config.json
@@ -6,13 +6,15 @@
       "prerelease": true
     },
     "packages/groq-store": {
-      "prerelease": true
+      "prerelease": true,
+      "release-as": "5.0.0-pink-lizard"
     },
     "packages/nuxt-loader": {
       "prerelease": true
     },
     "packages/overlays": {
-      "prerelease": true
+      "prerelease": true,
+      "release-as": "2.0.0-pink-lizard"
     },
     "packages/presentation": {
       "prerelease": true
