chore: undo release-as

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -7,14 +7,14 @@
     },
     "packages/groq-store": {
       "prerelease": true,
-      "release-as": "5.0.0"
+      "release-as": "5.0.0-pink-lizard"
     },
     "packages/nuxt-loader": {
       "prerelease": true
     },
     "packages/overlays": {
       "prerelease": true,
-      "release-as": "2.0.0"
+      "release-as": "2.0.0-pink-lizard"
     },
     "packages/presentation": {
       "prerelease": true
