chore: remove release-as

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -6,15 +6,13 @@
       "prerelease": true
     },
     "packages/groq-store": {
-      "prerelease": true,
-      "release-as": "5.0.0-pink-lizard"
+      "prerelease": true
     },
     "packages/nuxt-loader": {
       "prerelease": true
     },
     "packages/overlays": {
-      "prerelease": true,
-      "release-as": "2.0.0-pink-lizard"
+      "prerelease": true
     },
     "packages/presentation": {
       "prerelease": true
