--- a/packages/overlays/package.json
+++ b/packages/overlays/package.json
@@ -143,7 +143,6 @@
     "node": ">=16.14"
   },
   "publishConfig": {
-    "access": "public",
-    "tag": "pink-lizard"
+    "access": "public"
   }
 }
