--- a/packages/preview-url-secret/package.json
+++ b/packages/preview-url-secret/package.json
@@ -166,7 +166,6 @@
     "node": ">=18"
   },
   "publishConfig": {
-    "access": "public",
-    "tag": "pink-lizard"
+    "access": "public"
   }
 }
