--- a/release-please-config.json
+++ b/release-please-config.json
@@ -4,28 +4,28 @@
   "plugins": ["node-workspace"],
   "packages": {
     "packages/core-loader": {
-      "prerelease": true
+      "release-as": "1.0.0"
     },
     "packages/groq-store": {
-      "prerelease": true
+      "release-as": "5.0.0-experimental"
     },
     "packages/nuxt-loader": {
-      "prerelease": true
+      "release-as": "1.0.0"
     },
     "packages/overlays": {
-      "prerelease": true
+      "release-as": "2.0.0"
     },
     "packages/presentation": {
-      "prerelease": true
+      "release-as": "1.0.0"
     },
     "packages/preview-url-secret": {
-      "prerelease": true
+      "release-as": "1.0.0"
     },
     "packages/react-loader": {
-      "prerelease": true
+      "release-as": "1.0.0"
     },
     "packages/svelte-loader": {
-      "prerelease": true
+      "release-as": "1.0.0"
     }
   }
 }
