--- a/packages/core-loader/package.json
+++ b/packages/core-loader/package.json
@@ -145,7 +145,6 @@
     "node": ">=18"
   },
   "publishConfig": {
-    "access": "public",
-    "tag": "pink-lizard"
+    "access": "public"
   }
 }
