--- a/packages/presentation/package.json
+++ b/packages/presentation/package.json
@@ -147,7 +147,6 @@
     "node": ">=16.14"
   },
   "publishConfig": {
-    "access": "public",
-    "tag": "pink-lizard"
+    "access": "public"
   }
 }
