--- a/packages/react-loader/package.json
+++ b/packages/react-loader/package.json
@@ -168,7 +168,6 @@
     "node": ">=18"
   },
   "publishConfig": {
-    "access": "public",
-    "tag": "pink-lizard"
+    "access": "public"
   }
 }
