--- a/packages/svelte-loader/package.json
+++ b/packages/svelte-loader/package.json
@@ -126,7 +126,6 @@
     "node": ">=18"
   },
   "publishConfig": {
-    "access": "public",
-    "tag": "pink-lizard"
+    "access": "public"
   }
 }
