fix: attempt bundling `@sanity/ui` and `styled-components` for hydrogen compat

--- a/packages/overlays/package.json
+++ b/packages/overlays/package.json
@@ -111,14 +111,13 @@
     "root": true
   },
   "dependencies": {
-    "@sanity/ui": "^1.8.3",
     "@vercel/stega": "0.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "styled-components": "^6.1.0"
   },
   "devDependencies": {
     "@sanity/pkg-utils": "^3.2.2",
+    "@sanity/ui": "^1.8.3",
     "@types/react": "^18.2.34",
     "@types/react-dom": "^18.2.14",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
@@ -132,6 +131,7 @@
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "ls-engines": "^0.9.0",
     "rimraf": "^5.0.1",
+    "styled-components": "^6.1.0",
     "typescript": "^5.2.2",
     "visual-editing-helpers": "workspace:*",
     "vitest": "^0.34.6"
