--- a/packages/overlays/package.json
+++ b/packages/overlays/package.json
@@ -114,6 +114,7 @@
     "@vercel/stega": "0.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@sanity/pkg-utils": "^3.2.2",
