fix: export `encodeSanityNodeData`

--- a/apps/common/package.json
+++ b/apps/common/package.json
@@ -85,8 +85,8 @@
   "dependencies": {
     "@sanity/icons": "^2.6.0",
     "@sanity/overlays": "workspace:*",
-    "@sanity/ui": "^1.8.3",
-    "visual-editing-helpers": "workspace:*"
+    "@sanity/react-loader": "workspace:*",
+    "@sanity/ui": "^1.8.3"
   },
   "devDependencies": {
     "react": "^18.2.0",
