--- a/apps/remix/package.json
+++ b/apps/remix/package.json
@@ -23,8 +23,7 @@
     "isbot": "^3.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "source-map-support": "^0.5.21",
-    "visual-editing-helpers": "workspace:*"
+    "source-map-support": "^0.5.21"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.19.3",
