--- a/apps/common/tsconfig.json
+++ b/apps/common/tsconfig.json
@@ -26,7 +26,8 @@
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "paths": {
-      "@sanity/overlays": ["../../packages/overlays/src"]
+      "@sanity/overlays": ["../../packages/overlays/src"],
+      "@sanity/react-loader": ["../../packages/react-loader/src"]
     }
   },
   "include": ["**/*.ts", "**/*.tsx"],
