--- a/apps/nuxt/package.json
+++ b/apps/nuxt/package.json
@@ -16,8 +16,7 @@
     "apps-common": "workspace:*",
     "channels": "workspace:*",
     "rxjs": "^7.8.1",
-    "sanity": "^3.19.0",
-    "visual-editing-helpers": "workspace:*"
+    "sanity": "^3.19.0"
   },
   "devDependencies": {
     "@nuxt/devtools": "^1.0.0",
