--- a/apps/page-builder-demo/package.json
+++ b/apps/page-builder-demo/package.json
@@ -32,7 +32,6 @@
     "styled-components": "^6.1.0",
     "suspend-react": "0.1.3",
     "tailwindcss": "^3.3.5",
-    "typescript": "^5.2.2",
-    "visual-editing-helpers": "workspace:*"
+    "typescript": "^5.2.2"
   }
 }
