build(apps): add ts paths

--- a/apps/remix/tsconfig.json
+++ b/apps/remix/tsconfig.json
@@ -28,7 +28,11 @@
       "apps-common/*": ["../common/src/*"],
       "@sanity/core-loader": ["../../packages/core-loader/src"],
       "@sanity/react-loader": ["../../packages/react-loader/src"],
-      "@sanity/react-loader/jsx": ["../../packages/react-loader/src/jsx"]
+      "@sanity/react-loader/jsx": ["../../packages/react-loader/src/jsx"],
+      "visual-editing-helpers": ["../../packages/visual-editing-helpers/src"],
+      "visual-editing-helpers/csm": [
+        "../../packages/visual-editing-helpers/src/csm"
+      ]
     },
 
     // Remix takes care of building everything in `remix build`.
