feat: use the new `@sanity/client/stega` features

--- a/apps/common/package.json
+++ b/apps/common/package.json
@@ -86,7 +86,8 @@
     "@sanity/icons": "^2.6.0",
     "@sanity/overlays": "workspace:*",
     "@sanity/react-loader": "workspace:*",
-    "@sanity/ui": "^1.8.3"
+    "@sanity/ui": "^1.8.3",
+    "@vercel/stega": "0.1.0"
   },
   "devDependencies": {
     "react": "^18.2.0",
