--- a/apps/nuxt/package.json
+++ b/apps/nuxt/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@nuxtjs/tailwindcss": "^6.9.3",
+    "@sanity/client": "6.7.1-pink-lizard.2",
     "@sanity/nuxt-loader": "workspace:*",
     "@sanity/overlays": "workspace:*",
     "@sanity/presentation": "workspace:*",
