fix: handle stega nodes in a way that supports focus

--- a/apps/next/package.json
+++ b/apps/next/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@next/bundle-analyzer": "14.0.1",
     "@portabletext/react": "^3.0.11",
-    "@sanity/client": "6.7.1-pink-lizard.2",
+    "@sanity/client": "6.7.1-pink-lizard.5",
     "@sanity/image-url": "^1.0.2",
     "@sanity/overlays": "workspace:*",
     "@sanity/react-loader": "workspace:*",
@@ -22,13 +22,13 @@
     "apps-common": "workspace:*",
     "autoprefixer": "10.4.16",
     "channels": "workspace:*",
-    "eslint": "^8.52.0",
+    "eslint": "^8.53.0",
     "eslint-config-next": "14.0.1",
     "next": "14.0.1",
     "postcss": "8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "styled-components": "^6.1.0",
+    "styled-components": "6.1.0",
     "suspend-react": "0.1.3",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.2.2"
