--- a/apps/nuxt/package.json
+++ b/apps/nuxt/package.json
@@ -9,15 +9,15 @@
     "preview": "nuxt preview"
   },
   "dependencies": {
-    "@nuxtjs/tailwindcss": "^6.9.3",
-    "@sanity/client": "6.7.1-pink-lizard.2",
+    "@nuxtjs/tailwindcss": "^6.9.4",
+    "@sanity/client": "6.7.1-pink-lizard.5",
     "@sanity/nuxt-loader": "workspace:*",
     "@sanity/overlays": "workspace:*",
     "@sanity/presentation": "workspace:*",
     "apps-common": "workspace:*",
     "channels": "workspace:*",
     "rxjs": "^7.8.1",
-    "sanity": "^3.19.0"
+    "sanity": "3.18.2-pink-lizard.172"
   },
   "devDependencies": {
     "@nuxt/devtools": "^1.0.0",
