--- a/packages/presentation/package.json
+++ b/packages/presentation/package.json
@@ -114,7 +114,7 @@
   },
   "dependencies": {
     "@sanity/groq-store": "workspace:*",
-    "@sanity/icons": "^2.6.0",
+    "@sanity/icons": "^2.7.0",
     "@sanity/ui": "^1.8.3",
     "@types/lodash.isequal": "^4.5.7",
     "lodash.isequal": "^4.5.0",
@@ -122,19 +122,19 @@
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
-    "@sanity/client": "6.7.1-pink-lizard.2",
+    "@sanity/client": "6.7.1-pink-lizard.5",
     "@sanity/pkg-utils": "^3.2.2",
     "channels": "workspace:*",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sanity": "3.18.2-pink-lizard.172",
-    "styled-components": "^6.1.0",
+    "styled-components": "6.1.0",
     "typescript": "^5.2.2",
     "visual-editing-helpers": "workspace:*",
     "vitest": "^0.34.6"
   },
   "peerDependencies": {
-    "@sanity/client": "6.7.1-pink-lizard.2",
+    "@sanity/client": "6.7.1-pink-lizard.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sanity": "3.18.2-pink-lizard.172",
