--- a/apps/common/package.json
+++ b/apps/common/package.json
@@ -83,7 +83,7 @@
     "root": true
   },
   "dependencies": {
-    "@sanity/icons": "^2.6.0",
+    "@sanity/icons": "^2.7.0",
     "@sanity/overlays": "workspace:*",
     "@sanity/react-loader": "workspace:*",
     "@sanity/ui": "^1.8.3",
@@ -93,8 +93,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rxjs": "^7.8.1",
-    "sanity": "^3.19.0",
-    "styled-components": "^6.1.0",
+    "sanity": "3.18.2-pink-lizard.172",
+    "styled-components": "6.1.0",
     "typescript": "^5.2.2"
   },
   "peerDependencies": {
