--- a/apps/page-builder-demo/package.json
+++ b/apps/page-builder-demo/package.json
@@ -23,13 +23,13 @@
     "apps-common": "workspace:*",
     "autoprefixer": "10.4.16",
     "clsx": "^2.0.0",
-    "eslint": "^8.52.0",
+    "eslint": "^8.53.0",
     "eslint-config-next": "14.0.1",
     "next": "14.0.1",
     "postcss": "8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "styled-components": "^6.1.0",
+    "styled-components": "6.1.0",
     "suspend-react": "0.1.3",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.2.2"
