--- a/apps/studio/package.json
+++ b/apps/studio/package.json
@@ -9,16 +9,16 @@
     "@sanity/assist": "^1.2.12",
     "@sanity/presentation": "workspace:*",
     "@sanity/ui": "^1.8.3",
-    "@sanity/vision": "^3.19.0",
+    "@sanity/vision": "3.18.2-pink-lizard.172",
     "@types/react": "^18.2.34",
     "@types/react-dom": "^18.2.14",
     "apps-common": "workspace:*",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rxjs": "^7.8.1",
-    "sanity": "^3.19.0",
+    "sanity": "3.18.2-pink-lizard.172",
     "sanity-plugin-asset-source-unsplash": "^1.1.2",
-    "styled-components": "^6.1.0",
+    "styled-components": "6.1.0",
     "typescript": "^5.2.2"
   }
 }
