--- a/apps/svelte/package.json
+++ b/apps/svelte/package.json
@@ -14,18 +14,18 @@
   "devDependencies": {
     "@fontsource/fira-mono": "^5.0.8",
     "@neoconfetti/svelte": "^1.0.0",
-    "@sanity/client": "^6.7.0",
+    "@sanity/client": "6.7.1-pink-lizard.5",
     "@sanity/overlays": "workspace:*",
     "@sanity/presentation": "workspace:*",
     "@sanity/svelte-loader": "workspace:*",
-    "@sveltejs/adapter-auto": "^2.1.0",
-    "@sveltejs/kit": "^1.27.2",
+    "@sveltejs/adapter-auto": "^2.1.1",
+    "@sveltejs/kit": "^1.27.3",
     "@types/cookie": "^0.5.3",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
     "@typescript-eslint/parser": "^6.9.1",
     "apps-common": "workspace:*",
-    "eslint": "^8.52.0",
-    "eslint-plugin-svelte": "^2.34.0",
+    "eslint": "^8.53.0",
+    "eslint-plugin-svelte": "^2.34.1",
     "svelte": "^4.2.2",
     "svelte-check": "^3.5.2",
     "tslib": "^2.6.2",
