--- a/packages/overlays/package.json
+++ b/packages/overlays/package.json
@@ -115,7 +115,7 @@
     "@vercel/stega": "0.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "styled-components": "^6.1.0",
+    "styled-components": "6.1.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
@@ -125,14 +125,14 @@
     "@typescript-eslint/eslint-plugin": "^6.9.1",
     "@typescript-eslint/parser": "^6.9.1",
     "channels": "workspace:*",
-    "eslint": "^8.52.0",
+    "eslint": "^8.53.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "ls-engines": "^0.9.0",
-    "rimraf": "^5.0.1",
+    "rimraf": "^5.0.5",
     "typescript": "^5.2.2",
     "visual-editing-helpers": "workspace:*",
     "vitest": "^0.34.6"
