--- a/packages/overlays/package.json
+++ b/packages/overlays/package.json
@@ -115,6 +115,7 @@
     "@vercel/stega": "0.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "scroll-into-view-if-needed": "^3.1.0",
     "styled-components": "6.1.0",
     "uuid": "^9.0.1"
   },
